# compactdns

./: .gitignore  README.md  TODO.md  a.json  benchmark.sh  blocklist.example  blocklist.json  blocklist.toml  cdns.py  config.toml  config.txt  main.py  profiler.py  pyproject.toml  r.py  test.py
cdns/: __init__.py  __main__.py  cache.py  cli.py  daemon.py  manager.py  protocol.py  records.py  resolver.py  response.py  shell_client.py  smartselector.py  storage.py  utils.py  zones.py
cdns/_installer/: __init__.py  macos.py
cdns/cli/: __init__.py  cli.py  kwargs.py  shell_client.py
cdns/client/: __init__.py  client.py
cdns/forwarders/: __init__.py  base.py  streams.py  tcp.py  tls.py  udp.py
cdns/forwarders/http/: __init__.py  http1.py  http2.py
cdns/lcb/: __init__.py  lcb.py
cdns/protocol/: __init__.py  doh.py  protocol.py
cdns/resolver/: __init__.py
cdns/resolver/forwarders/: __init__.py  base.py  doh.py  streams.py  tcp.py  tls.py  udp.py
cdns/resolver/forwarders/doh/: doh.py  http1.py  http2.py
cdns/resolver/resolvers/: __init__.py  base.py  recursive.py  upstream.py
cdns/resolvers/: __init__.py  base.py  recursive.py  upstream.py
cdns/response/: __init__.py  mixins.py  response.py
cdns/server/: cache.py  manager.py  storage.py
cdns/server/_installer/: macos.py
cdns/server/response/: __init__.py  mixins.py  response.py  timer.py
cdns/smartselector/: __init__.py  smartselector.py
cdns/tools/: __init__.py  config2launchd.py  h2j.py  hosts_convert.py  shell_client.py
cdns/tools/installer/: cdns.plist
cdns/tools/zone_convert/: __init__.py
cdns/zones/: __init__.py  parser.py  zone.py
data/: preload.txt
docs/: resolver.md
example-blocklists/: blocklist.toml  hosts.txt
example-records/: records.json  records.toml
example-zones/: example.com.json  example.com.zone  foo.all.json  lowe.all.json
tests/: README.md  test_records.py
tests/core/: base_test_server.py  config.toml  spawn_server.py  test_server.py
tests/protocol/: example.com.zone  test_records.py
tests/server/: config.toml  conftest.py  test_server.py
tests/servers/: http_echo.py
tools/: generate_queries.py  hosts.py  http_echo.py
