[build-system]
requires = ["setuptools", "wheel", "mypy"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cdns"]

[project]
name = "compactdns"
version = "0.0.103"
requires-python = ">=3.11"
dependencies = [
    "publicsuffixlist>=1.0",
    "tomli>=1.0; python_version < '3.11'"
]

[project.scripts]
cdns = "cdns.cli:cli"
