[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["cdns*"]

[tool.setuptools.package-data]
"cdns.server._installer.data" = ["*"]

[project]
name = "compactdns"
authors = [
    { name="ninjamar" }
]
description = "CompactDNS (CDNS) is a minimalistic yet powerful DNS server designed for simplicity and speed."

readme = "README.md"
version = "0.1.0a6"


license = { file = "LICENSE" }


requires-python = ">=3.10"
dependencies = [
    "publicsuffixlist>=1.0",
    "tomli>=1.0; python_version < '3.11'",
    "h11>=0.10.0", # TODO: Is this ok
    "h2>=4.2.0",
]

classifiers = [
    "Development Status :: 3 - Alpha",

    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",

    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",

    "Topic :: Communications",
    "Topic :: Internet",
    "Topic :: Internet :: Name Service (DNS)",
    "Typing :: Typed",
]
keywords = ["dns", "privacy", "dns-server", "adblocker", "dns-over-tls"]


[project.urls]

Homepage = "https://github.com/ninjamar/compactdns"
Repository = "https://github.com/ninjamar/compactdns"
Issues = "https://github.com/ninjamar/compactdns/issues"

[project.scripts]
cdns = "cdns.cli:cli"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "darglint>=1.8.1",
    "ipdb>=0.13.13",
    "isort>=6.0.1",
    "line-profiler>=5.0.0",
    "pytest>=8.4.2",
    "radon>=6.0.1",
    "ruff>=0.12.2",
    "timerit>=1.1.0",
    "ty>=0.0.1a14",
]
